--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -8,7 +8,7 @@ body {
   font-size: 1.6em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  // border: 4px solid #000;
+  border: 4px solid #000;
 }
 
 h1 {
